providing details about movies

--- a/main.html
+++ b/main.html
@@ -8,6 +8,63 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>
+		<h3>RAMAIYA VASTAVAIYA</h3>
+		<nav id="nav1">
+         <a class="a1" id="nav-actor" href="#actor">actor</a>
+		 <a class="a1" id="nav-quote" href="#quote">Quotes</a>
+		</nav>
+	</header>
+	<section>
+        <main>
+			<summary id="sum1">Summary of movie</summary>
+			<p>
+				RAMAIYA VASTAVAIYA,City boy ram falls in love with village belle Sona,Who has been raised by her brother,Raghuveer.However,When his mother insults sona,Raghuveer askes Ram to prove himself worthy of marryiyng Sona. 
+			</p>
+			<section id="actor">
+				<p>
+					Girish Kumar as Ram Kapoor.
+					Shruti Haasan as Sona Singh. ...
+					Sonu Sood as Raghuveer 'Raghu' Singh, Sona's elder brother. ...
+					Randhir Kapoor as Siddhanth Kapoor, Ram's father.
+					Poonam Dhillon as Ashwini Kapoor, Ram's mother.
+					Vinod Khanna as Station Master Shankar.
+					Paresh Ganatra as Bijlee.
+				</p>
+			</section>
+
+			<section id="quote">
+				<p id="p1">
+					Sona : I'm not your girlfriend! Ram : Girls always say the opposite. Sona : I meant I am, I am! Ram : That's what I said.
+					Sona : [to Ram] By the way, how many girlfriends do you have? Ram : Hmmm... 14, including you! ...
+					Ram : [to Sona] Something-something... Sona : Huh? Ram : [In singing voice] Something-something!
+				</p>
+			</section>
+			<div>
+				<section id="#actor">
+
+				</section>
+
+			</div>
+			<div>
+				<section id="#quote">
+
+				</section>
+			</div>
+			<div id="div1">
+				<aside id="aside1">
+					<p>
+                        RAMAIYA VASTAVAIYA is a romantic film directed by Prabhu Dheva, starring Girish Taurani, Shruti Hassan & Sonu Sood. The film revolves around Ram and Sona.
+                    </p>
+				</aside>
+			</div>
+		</main>
+</section>
+
+<footer>
+	<p id="p0"> Produced by: Kumar S. Taurani;</p>
+</footer>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
