--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<header>
-		<h3>RAMAIYA VASTAVAIYA</h3>
+		<h1>Rmaiya vastavaiya</h1>
 		<nav id="nav1">
          <a class="a1" id="nav-actor" href="#actor">actor</a>
 		 <a class="a1" id="nav-quote" href="#quote">Quotes</a>
