--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<header>
-		<h1>Rmaiya vastavaiya</h1>
+		<h1> </h1>
 		<nav id="nav1">
          <a class="a1" id="nav-actor" href="#actor">actor</a>
 		 <a class="a1" id="nav-quote" href="#quote">Quotes</a>
@@ -62,7 +62,7 @@
 </section>
 
 <footer>
-	<p id="p0"> Produced by: Kumar S. Taurani;</p>
+	<p id="p0"> Produced by: &lt;Kumar S. Taurani gjt;</p>
 </footer>
 
     <script type="text/javascript" src="./script.js">
