--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<header>
-		<h1> </h1>
+		RAMAIYA VASTAVAIYA
 		<nav id="nav1">
          <a class="a1" id="nav-actor" href="#actor">actor</a>
 		 <a class="a1" id="nav-quote" href="#quote">Quotes</a>
@@ -42,19 +42,22 @@
 			</section>
 			<div>
 				<section id="#actor">
-
+                 Ram
+				 Sona
 				</section>
 
 			</div>
 			<div>
 				<section id="#quote">
-
+                jeene laga hoon
 				</section>
 			</div>
 			<div id="div1">
 				<aside id="aside1">
 					<p>
-                        RAMAIYA VASTAVAIYA is a romantic film directed by Prabhu Dheva, starring Girish Taurani, Shruti Hassan & Sonu Sood. The film revolves around Ram and Sona.
+                        RAMAIYA VASTAVAIYA is a romantic film directed by Prabhu Dheva, starring Girish Taurani, Shruti Hassan & Sonu Sood.
+						10/10.
+						releasing date=19 july 2013
                     </p>
 				</aside>
 			</div>
